# app-updater

./: .gitignore  Cargo.toml  Makefile  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs  raii.rs  win32.rs
tests/: updater_test.rs
