[package]
name = "app-updater"
version = "0.0.2"
edition = "2021"
description = "Ra3Toolkits updater"
authors = ["simonkimi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_System_Diagnostics_ToolHelp", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"]


[profile.release]
panic = "abort"

[build-dependencies]
embed-resource = "3.0.1"